rebase to 0.8.1 and fix a transition overlapping bug

--- a/sumeru/src/assets/css/transition.css
+++ b/sumeru/src/assets/css/transition.css
@@ -11,8 +11,7 @@ html,body{
     width:100%;
     height:100%;
 	-webkit-perspective: 1000;
-	overflow-x: hidden;
-	overflow-y: hidden;
+	overflow: hidden;
     -webkit-overflow-scrolling: touch;
 }
 .hide{
